# DataScienceStudies

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_DEVELOPMENT_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: caching.py  config.py  main.py  state.py
app/api/: main.py
app/components/: __init__.py  applications.py  code.py  demo.py  demo_clustering.py  demo_regression.py  math.py  page_pitfalls.py  page_references.py  pitfalls.py  references.py  theory.py
app/data/: clustering.py  general.py  regression.py
app/data/models/: __init__.py
app/data/repositories/: __init__.py
app/logic/: clustering.py  regression.py
app/pages/: 01_📈_regression.py  02_🔍_clustering.py  template_concept_page.py
docker/: Dockerfile.api  Dockerfile.streamlit
scripts/: generate_fake_data.py  validate_all.py  validate_components.py  validate_page_structure.py
tests/: conftest.py  test_basic.py  test_database.py
tests/test_logic/: test_clustering.py
